# pycounts_mg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_mg/: __init__.py
tests/: test_pycounts_mg.py
